--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "next": "12.0.3",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.8.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
     "eslint": "7",
-    "eslint-config-next": "12.0.3"
+    "eslint-config-next": "12.0.3",
+    "typescript": "^4.5.2"
   }
 }
