--- a/package.json
+++ b/package.json
@@ -5,21 +5,51 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "ts-node-dev --respawn --transpile-only server/index.ts",
+    "migrate": "npx sequelize-cli db:migrate"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
+    "@types/passport": "^1.0.7",
+    "@types/passport-github2": "^1.2.5",
+    "@types/passport-twitter": "^1.0.37",
+    "app-root-path": "^3.1.0",
+    "axios": "^0.24.0",
+    "cloudinary": "^1.28.1",
     "clsx": "^1.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^15.0.1",
+    "express": "^4.17.2",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
+    "nanoid": "^3.3.2",
     "next": "12.0.3",
     "node-sass": "^6.0.1",
+    "passport": "^0.5.2",
+    "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.0",
+    "passport-twitter": "^1.0.4",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-number-format": "^4.8.0"
+    "react-number-format": "^4.8.0",
+    "sequelize": "^6.15.1",
+    "sharp": "^0.30.3",
+    "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
+    "sequelize-cli": "^6.4.1",
     "typescript": "^4.5.2"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
