--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nanoid": "^3.3.2",
     "next": "12.0.3",
     "node-sass": "^6.0.1",
+    "nookies": "^2.5.2",
     "passport": "^0.5.2",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.0",
