--- a/package.json
+++ b/package.json
@@ -1,60 +1,62 @@
 {
   "name": "clubhouse-clone",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "server": "ts-node-dev --respawn --transpile-only server/index.ts",
     "migrate": "npx sequelize-cli db:migrate"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/multer": "^1.4.7",
-    "@types/passport": "^1.0.7",
-    "@types/passport-github2": "^1.2.5",
-    "@types/passport-twitter": "^1.0.37",
+    "@reduxjs/toolkit": "^1.5.1",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
+    "@types/passport": "^1.0.6",
+    "@types/passport-github": "^1.1.5",
+    "@types/sharp": "^0.28.0",
+    "@types/simple-peer": "^9.6.3",
+    "@types/socket.io": "^2.1.13",
     "app-root-path": "^3.1.0",
-    "axios": "^0.24.0",
-    "cloudinary": "^1.28.1",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^15.0.1",
-    "express": "^4.17.2",
-    "js-cookie": "^3.0.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4",
-    "nanoid": "^3.3.2",
-    "next": "12.0.3",
-    "next-redux-wrapper": "^8.1.0",
-    "node-sass": "^8.0.0",
+    "multer": "^1.4.2",
+    "nanoid": "^3.1.22",
+    "next": "12.2.5",
+    "next-redux-wrapper": "^6.0.2",
+    "node-sass": "^5.0.0",
     "nookies": "^2.5.2",
-    "passport": "^0.5.2",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.0",
-    "passport-twitter": "^1.0.4",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-number-format": "^4.8.0",
-    "react-redux": "^8.0.5",
+    "react-number-format": "^4.5.1",
+    "react-redux": "^7.2.4",
     "sass": "^1.57.1",
-    "sequelize": "^6.15.1",
-    "sharp": "^0.30.3",
-    "ts-node-dev": "^1.1.8"
+    "sequelize": "^6.6.2",
+    "sharp": "^0.28.1",
+    "simple-peer": "^9.11.0",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
+    "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.2",
-    "@types/node": "^16.11.10",
-    "@types/react": "^17.0.37",
-    "eslint": "7",
-    "eslint-config-next": "12.0.3",
-    "sequelize-cli": "^6.4.1",
-    "typescript": "^4.5.2"
-  },
-  "proxy": "http://localhost:3001"
+    "@types/js-cookie": "^2.2.6",
+    "@types/node": "^14.14.37",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/react": "^18.0.27",
+    "sequelize-cli": "^6.2.0",
+    "typescript": "^4.2.3"
+  }
 }
